--- a/src/css/style.css
+++ b/src/css/style.css
@@ -152,6 +152,120 @@ a:hover {
   border-right: 13px solid transparent;
 }
 
+.global-header{
+  background-color: black;
+  display: flex;
+}
+
+/* .header1{
+  background-color: black;
+} */
+
+.icon{
+  height: 1.5em;
+  width: 1.5em;
+  margin-right: 0.3em;
+  display: inline-block;
+  /* border-left: 0.5em solid transparent; */
+  /* border-right: 0.5em solid transparent; */
+}
+
+#NPS-title{
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+a.site-title{
+  text-decoration: none;
+}
+
+.global-header__right{
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 1em;
+
+}
+
+#global-nav-toggle{
+  justify-content: flex-end;
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  margin-left: 10px;
+}
+
+.hero-banner {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.hero-banner > img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+.content {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  padding: 0.5em 1em;
+}
+
+.content a{
+  text-decoration: none;
+  color: white;
+}
+
+.park-title {
+  font-size: 1.8em;
+}
+
+.subheader {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.8rem;
+}
+
+.park-nav {
+  padding-left: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  font-size: 0.8rem;
+}
+
+.park-nav a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0.8em 2em;
+}
+
+.park-nav-content{
+  text-decoration: none;
+  color: white;
+}
+
+.park-nav-content span{
+  color: white;
+}
+
+
+
 /* Utility styles */
 
 .visually-hidden {
