--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,3 +285,71 @@ svg {
   background-color: var(--bs-black);
   fill: white;
 }
+
+.info {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.5rem;
+  margin-top: 2rem;
+}
+
+.media-card {
+  padding: 1rem;
+  text-align: left;
+}
+
+.media-card a{
+  text-decoration: none;
+  color: inherit;
+}
+
+.intro{
+  margin-left: 20px;
+  margin-top: 25px;
+}
+
+.intro p{
+  font-size: larger;
+}
+
+#park-footer{
+  background-color: #f4f2ee;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+
+
+@media (max-width: 430px) {
+  body {
+    font-size: 16px; 
+    line-height: 1.5;
+  }
+
+  .hero-banner > img {
+    height: 250px; 
+    }
+
+  .content {
+    flex-direction: column;
+    padding: 0.8em;
+  }
+
+  .park-title {
+    font-size: 1.3em;
+  }
+
+  .info {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .media-card {
+    padding: 0.8rem;
+    font-size: 0.9rem;
+  }
+
+  #park-footer {
+    padding: 15px;
+    font-size: 0.9rem;
+  }
+}
